Cleanups (#6)
* Update request, response, mappings, tests
* Remove redundant code
