# Meetup.Contracts/Models/LectureRequest.cs
@@ -1,0 +1,8 @@
+﻿namespace MeetupAPI.Models;
+
+public class LectureRequest
+{
+    public string Author { get; set; }
+    public string Topic { get; set; }
+    public string Description { get; set; }
+}
