# Meetup.Contracts/Models/MeetupRequest.cs
@@ -1,12 +1,8 @@
-﻿using System.ComponentModel.DataAnnotations;
-namespace MeetupAPI.Models;
+﻿namespace MeetupAPI.Models;
 
-public class MeetupDto
+public class MeetupRequest
 {
-    [Required]
-    [MinLength(3)]
     public string Name { get; set; }
-    [Required]
     public string Organizer { get; set; }
     public DateTime Date { get; set; }
     public bool IsPrivate { get; set; }
