# MeetupAPI/Controllers/LectureController.cs
@@ -1,14 +1,12 @@
-﻿using System.Collections.Generic;
-using System.Linq;
+﻿using System.Linq;
 using System.Net;
-using AutoMapper;
 using Entities;
-using ErrorHandling;
 using ErrorHandling.Exceptions;
 using MeetupAPI.Models;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.EntityFrameworkCore;
 using Microsoft.Extensions.Logging;
+using Lecture = MeetupAPI.Models.Lecture;
 
 namespace Controllers;
 
@@ -16,14 +14,66 @@ namespace Controllers;
 public class LectureController : ControllerBase
 {
     private readonly MeetupContext _meetupContext;
-    private readonly IMapper _mapper;
     private readonly ILogger<LectureController> _logger;
 
-    public LectureController(MeetupContext meetupContext, IMapper mapper, ILogger<LectureController> logger)
+    public LectureController(MeetupContext meetupContext, ILogger<LectureController> logger)
     {
         _meetupContext = meetupContext;
-        _mapper = mapper;
         _logger = logger;
+    }
+
+    [HttpGet]
+    public ActionResult Get(string meetupName)
+    {
+        var meetup = _meetupContext.Meetups
+            .Include(m => m.Lectures)
+            .FirstOrDefault(m => m.Name.Replace(" ", "-").ToLower() == meetupName.ToLower());
+
+        if (meetup == null)
+        {
+            throw new ApiResponseException(HttpStatusCode.NotFound, $"Meetup with name {meetupName} has not been found");
+        }
+
+        var lectures = new LectureResponse
+        {
+            Lectures = meetup.Lectures.Select(x => new Lecture
+            {
+                Author = x.Author,
+                Topic = x.Topic,
+                Description = x.Description
+            }).ToList(),
+            MeetupName = meetup.Name,
+            MeetupOrganizer = meetup.Organizer
+        };
+
+        return Ok(lectures);
+    }
+
+    [HttpPost]
+    public ActionResult Post(string meetupName, [FromBody] LectureRequest request)
+    {
+        var meetup = _meetupContext.Meetups
+            .Include(m => m.Lectures)
+            .FirstOrDefault(m => m.Name.Replace(" ", "-").ToLower() == meetupName.ToLower());
+
+        if (meetup == null)
+        {
+            throw new ApiResponseException(HttpStatusCode.NotFound, $"Meetup with name {meetupName} has not been found");
+        }
+
+        var lecture = new Entities.Lecture
+        {
+            Author = request.Author,
+            Topic = request.Topic,
+            Description = request.Description,
+            Meetup = meetup,
+            MeetupId = meetup.Id
+        };
+        
+        meetup.Lectures.Add(lecture);
+        _meetupContext.SaveChanges();
+
+        return Created($"api/meetup/{meetupName}", null);
     }
 
     [HttpDelete]
@@ -69,45 +119,5 @@ public class LectureController : ControllerBase
         _meetupContext.SaveChanges();
 
         return NoContent();
-    }
-
-    [HttpGet]
-    public ActionResult Get(string meetupName)
-    {
-        var meetup = _meetupContext.Meetups
-            .Include(m => m.Lectures)
-            .FirstOrDefault(m => m.Name.Replace(" ", "-").ToLower() == meetupName.ToLower());
-
-        if (meetup == null)
-        {
-            throw new ApiResponseException(HttpStatusCode.NotFound, $"Meetup with name {meetupName} has not been found");
-        }
-
-        var lectures = _mapper.Map<List<LectureDto>>(meetup.Lectures);
-
-        return Ok(lectures);
-    }
-
-    [HttpPost]
-    public ActionResult Post(string meetupName, [FromBody] LectureDto model)
-    {
-        if (!ModelState.IsValid)
-        {
-            ErrorMessages.BadRequestMessage(model, ModelState);
-        }
-        var meetup = _meetupContext.Meetups
-            .Include(m => m.Lectures)
-            .FirstOrDefault(m => m.Name.Replace(" ", "-").ToLower() == meetupName.ToLower());
-
-        if (meetup == null)
-        {
-            throw new ApiResponseException(HttpStatusCode.NotFound, $"Meetup with name {meetupName} has not been found");
-        }
-
-        var lecture = _mapper.Map<Lecture>(model);
-        meetup.Lectures.Add(lecture);
-        _meetupContext.SaveChanges();
-
-        return Created($"api/meetup/{meetupName}", null);
     }
 }
