# MeetupAPI/MeetupProfile.cs
@@ -1,19 +1,0 @@
-﻿using AutoMapper;
-using Entities;
-using MeetupAPI.Models;
-
-public class MeetupProfile : Profile
-{
-    public MeetupProfile()
-    {
-        CreateMap<Meetup, MeetupDetailsDto>()
-            .ForMember(m => m.City, map => map.MapFrom(meetup => meetup.Location.City))
-            .ForMember(m => m.PostCode, map => map.MapFrom(meetup => meetup.Location.PostCode))
-            .ForMember(m => m.Street, map => map.MapFrom(meetup => meetup.Location.Street));
-
-        CreateMap<MeetupDto, Meetup>();
-
-        CreateMap<LectureDto, Lecture>()
-            .ReverseMap();
-    }
-}
